# je_opencv_wrapper

./: .gitignore  Contours.py  Core.py  Draw.py  Edge.py  Event.py  FPS.py  Face_Detection.py  Feature.py  Feature_Detection.py  Fourier.py  Gradients.py  Hough_Line.py  IO.py  Image_Operations.py  Image_Processing.py  Morphological.py  Object_Tracking.py  OpenCV_Core.py  OpenCV_IO.py  OpenCV_Test.py  OpenCV_Video.py  Pyramids.py  README.md  Smoothing.py  Template_Detection.py  Thresholding.py  UI.py  Video.py  dev_setup.py  pyproject.toml  requirements.txt  setup.py  stable.toml
.circleci/: config.yml
Models/: Basic_Image_Processing.py  Event.py  FPS.py  Feature.py  Feature_Detection.py  Gradients.py  Histograms.py  IO.py  Morphological.py  Template_Detection.py  UI.py  Video.py
Module/: Basic_Image_Processing.py
OpenCV_Core/: OpenCV_Core.py
Tests/: OpenCV_Test.py
circleci_test/: cv2_detect_test.py  import_test.py
deprecation_for_old_python/: dev_setup.py  setup.py
je_open_cv/: __init__.py  template_detection.py
je_open_cv/modules/: __init__.py  contours.py  cv_event.py  draw.py  edge.py  face_detection.py  feature.py  feature_detection.py  fourier.py  fps.py  gradients.py  histograms.py  hough_line.py  image_operations.py  io.py  morphological.py  object_tracking.py  pyramids.py  smoothing.py  template_detection.py  thresholding.py  ui.py  video.py
test/: find_multi_template_cv2_test.py  find_multi_template_test.py  find_one_template_cv2_test.py  find_one_template_test.py  import_test.py  template_detection_multi_pil_test.py  template_detection_multi_test.py  template_detection_pil_test.py  template_detection_test.py
